--- a/BTAF.Lib/BTAF.Lib.csproj
+++ b/BTAF.Lib/BTAF.Lib.csproj
@@ -32,6 +32,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.Configuration.Install" />
     <Reference Include="System.Core" />
     <Reference Include="System.Management" />
     <Reference Include="System.ServiceProcess" />
@@ -46,6 +47,7 @@
     <Compile Include="AudioDevice.cs" />
     <Compile Include="AudioDevices.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ServiceInstallHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="ServiceControl.cs" />
