--- a/BTAF.Lib/BTAF.Lib.csproj
+++ b/BTAF.Lib/BTAF.Lib.csproj
@@ -47,6 +47,7 @@
     <Compile Include="AudioDevice.cs" />
     <Compile Include="AudioDeviceEnumerator.cs" />
     <Compile Include="AudioDevices.cs" />
+    <Compile Include="ConfigFile.cs" />
     <Compile Include="Interop\Blob.cs" />
     <Compile Include="Interop\ClsCtx.cs" />
     <Compile Include="Interop\EDataFlow.cs" />
@@ -61,6 +62,10 @@
     <Compile Include="Interop\NativeMethods.cs" />
     <Compile Include="Interop\PropertyKey.cs" />
     <Compile Include="Interop\PropVariant.cs" />
+    <Compile Include="NativeWrapper\GenericAccessRights.cs" />
+    <Compile Include="NativeWrapper\Service.cs" />
+    <Compile Include="NativeWrapper\ServiceControlManager.cs" />
+    <Compile Include="NativeWrapper\ServiceInfoLevel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceInstallHelper.cs" />
   </ItemGroup>
