Add manual audio monitor

--- a/BTAF.Service/BTAF.Service.csproj
+++ b/BTAF.Service/BTAF.Service.csproj
@@ -57,6 +57,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioComboBoxItem.cs" />
+    <Compile Include="AudioMonitor.cs" />
     <Compile Include="BTAFService.cs">
       <SubType>Component</SubType>
     </Compile>
